--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <header>
         <h1>Selamat Datang di Website Saya</h1>
     </header>
-
     <main>
         <p>Paragraf Pertama</p>
+        <button class=wa_button>Whatsapp</button>
     </main>
 
     <footer>
