--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Made in Abyss</title>
   <style>
     .wa_button{
+        background-color: green;
+        color: white;
+        font-weight: bold;
+        border-radius: 3px;
+        box-shadow: 3px,3px;
     }
   </style>
 </head>
