--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
     </header>
     <main>
         <p>Paragraf Pertama</p>
-        <button class=wa_button>Whatsapp</button>
+    <button
+        <a>
+            class="wa_button"
+            href=wa.me/6285604045480 >Whatsapp
+        </a>
+    </button>
     </main>
 
     <footer>
