--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         font-weight: bold;
         border-radius: 3px;
         box-shadow: 3px,3px;
+        border-style: none;
+    }
+    .wa_button.hover{
+        background-color: aquamarine;
+        color: black;
+        transition: ease-in-out 1s;
     }
   </style>
 </head>
