--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         box-shadow: 3px,3px;
         border-style: none;
     }
-    .wa_button.hover{
+    .wa_button:hover{
         background-color: aquamarine;
         color: black;
         transition: ease-in-out 1s;
