--- a/index.html
+++ b/index.html
@@ -6,18 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Made in Abyss</title>
   <style>
-    .wa_button{
+    .wa-link{
         background-color: green;
         color: white;
         font-weight: bold;
         border-radius: 3px;
         box-shadow: 3px,3px;
         border-style: none;
+        box-shadow: 5px, 5px, 8px black;
+        transition: ease-in-out 1s;
+        width: 50px;
+        height: 50px;
     }
-    .wa_button:hover{
+    .wa-link:hover{
         background-color: aquamarine;
         color: black;
-        transition: ease-in-out 1s;
+    }
+    .wa-link:active{
+        opacity: 0.7;
     }
   </style>
 </head>
@@ -27,12 +33,10 @@
     </header>
     <main>
         <p>Paragraf Pertama</p>
-    <button
         <a
-            class="wa_button"
-            href=wa.me/6285604045480 >Whatsapp
+            class="wa-link"
+            href=>Whatsapp
         </a>
-    </button>
     </main>
 
     <footer>
