--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
         border-style: none;
         box-shadow: 5px, 5px, 8px black;
         transition: ease-in-out 1s;
-        width: 50px;
-        height: 50px;
+        width: 200px;
+        height: 200px;
+        font-style:normal;
+        font-variant: normal;
     }
     .wa-link:hover{
         background-color: aquamarine;
