--- a/index.html
+++ b/index.html
@@ -27,11 +27,20 @@
     .wa-link:active{
         opacity: 0.7;
     }
+    .Judul{
+        color:black;
+        font-size:large;
+    }
+    .Judul:active{
+        color:yellow;
+        transition: ease-in 0.3s;
+
+    }
   </style>
 </head>
 <body>
     <header>
-        <h1>Selamat Datang di Website Saya</h1>
+        <h1 class=Judul>Welcome to X TKJ-1</h1>
     </header>
     <main>
         <p>Paragraf Pertama</p>
