--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     .Judul{
         color:black;
         font-size:large;
+        text-align: center;
     }
     .Judul:active{
         color:yellow;
