--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     }
     .Judul{
         color:black;
-        font-size:large;
+        font-size:50px;
         text-align: center;
     }
     .Judul:active{
         color:yellow;
-        transition: ease-in 0.3s;
+        transition: ease-in-out 2s;
 
     }
   </style>
