--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Kelas — Nama Mata Pelajaran</title>
+  <title>Kelas x TKJ-1</title>
   <meta name="description" content="Website kelas: info, silabus, jadwal, tugas, sumber." />
   <!-- Google font (optional, but widely supported) -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -171,13 +171,13 @@
         <div class="card hero">
           <div class="section-title">
             <div>
-              <h2>Selamat datang di Kelas — Nama Mata Pelajaran</h2>
-              <p class="meta">Pengajar: Bapak/Ibu Contoh • Email: guru@sekolah.edu • Ruang: A1</p>
+              <h2>Selamat datang di Kelas X TKJ-1</h2>
+              <p class="meta">Pengajar: Ibu Daning•</p>
             </div>
             <div class="chips">
-              <span class="chip">Kelas: 12</span>
+              <span class="chip">Kelas: 10</span>
               <span class="chip">Semester 1</span>
-              <span class="chip">Tipe: Tatap Muka</span>
+              <span class="chip">Metode: Offline</span>
             </div>
           </div>
 
