--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     section {
       background: #fff;
       margin: 1rem 0;
+      margin-bottom: 4rem;
       padding: 1.2rem;
       border-radius: 6px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
@@ -74,7 +75,7 @@
       color: #fff;
       padding: 1rem;
       margin-top: 2rem;
-      font-size: 0.9rem;
+      font-size: 2rem;
     }
   </style>
 </head>
