--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Website Kelas</title>
+  <title>X TKJ-1</title>
   <style>
     body {
       font-family: sans-serif;
@@ -82,7 +82,7 @@
 <body>
 
   <header>
-    <h1>Website Kelas</h1>
+    <h1>Kelas X TKJ-1</h1>
     <p>Belajar & Berkarya Bersama</p>
   </header>
 
@@ -94,17 +94,17 @@
 
   <main>
     <section id="profil">
-      <h2>Profil Kelas</h2>
-      <p>Kelas X IPA 1 | Angkatan 2025</p>
+      <h2>Jurusan kelas</h2>
+      <p>Kelas X TKJ-1 'Komputer dan Jaringan'</p>
     </section>
 
     <section id="anggota">
       <h2>Daftar Anggota</h2>
       <ul>
-        <li>1. Andi</li>
-        <li>2. Budi</li>
-        <li>3. Citra</li>
-        <li>4. Dina</li>
+        <li>1. Kevin Septiano</li>
+        <li>2. Niggas</li>
+        <li>3. Oral</li>
+        <li>4. Admint</li>
       </ul>
     </section>
 
