--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title> Dark Deer </title>
+  <title>Modern Login Form | CodingStella </title>
   <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'>
-<link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Poppins&amp;display=swap'><link rel="stylesheet" href="styles.css">
+<link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Poppins&amp;display=swap'><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
@@ -49,90 +49,5 @@
 </div>
 <!-- partial -->
   
-</body>
-</html>      transition: background 0.3s;
-    }
-    nav a:hover {
-      background: #2E7D32;
-    }
-    main {
-      padding: 1.5rem;
-      max-width: 800px;
-      margin: auto;
-    }
-    section {
-      background: #fff;
-      margin: 1rem 0;
-      margin-bottom: 4rem;
-      padding: 1.2rem;
-      border-radius: 6px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    section h2 {
-      margin-top: 0;
-      font-size: 1.3rem;
-      color: #4CAF50;
-    }
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-    ul li {
-      padding: 0.3rem 0;
-      border-bottom: 1px solid #eee;
-    }
-    ul li:last-child {
-      border-bottom: none;
-    }
-    footer {
-      text-align: center;
-      background: #333;
-      color: #fff;
-      padding: 1rem;
-      margin-top: 2rem;
-      font-size: 2rem;
-    }
-  </style>
-</head>
-<body>
-
-  <header>
-    <h1>Kelas X TKJ-1</h1>
-    <p>Belajar & Berkarya Bersama</p>
-  </header>
-
-  <nav>
-    <a href="#profil">Profil</a>
-    <a href="#anggota">Anggota</a>
-    <a href="#pengumuman">Pengumuman</a>
-  </nav>
-
-  <main>
-    <section id="profil">
-      <h2>Jurusan kelas</h2>
-      <p>Kelas X TKJ-1 'Komputer dan Jaringan'</p>
-    </section>
-
-    <section id="anggota">
-      <h2>Daftar Anggota</h2>
-      <ul>
-        <li>1. Kevin Septiano</li>
-        <li>2. Niggas</li>
-        <li>3. Oral</li>
-        <li>4. Admint</li>
-      </ul>
-    </section>
-
-    <section id="pengumuman">
-      <h2>Pengumuman</h2>
-      <p>📢 Ujian Tengah Semester dimulai tanggal 15 September.</p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Website Kelas</p>
-  </footer>
-
 </body>
 </html>
