--- a/index.html
+++ b/index.html
@@ -8,53 +8,41 @@
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 </head>
 <body>
-  <main>
-    <nav class="navbar">
-  <a href="#" class="logo">Dashboard</a>
-
-  <div class="menu">
-    <a href="#">Services</a>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-  </div>
-
-  <a href="#" class="login">Login</a>
-</nav>
-<div class="peng">
-  <div class="pengl">
-    <h1>XiangYu JiangYu GlassMorphism None Of Them</h1>
-    <p>Tang sect is the best sect overtime in douluo dalu world and no one can beat them</p>
-    <div class="kotakk">Kotak</div>
-    <div class="kotakk">Kotak</div>
-    <div class="kotakk">Kotak</div>
-    <div class="kotakb">Kotak agak besar</div>
-    <figure></figure>
-  </div>
-  <div class="pengr">
-    <h4>Disini hanya ada gambar card saja</h4>
-    <div class="cardb">Card Lumayan Besar</div>
-  </div>
-</div>
-<div class="sponsor">
-  <p>Binance</p>
-  <p>Bitcoin</p>
-  <p>Litecoin</p>
-  <p>Coretax</p>
-  <p>Coretax</p>
-  <p>Coretax</p>
-  <p>Coretax</p>
-  <p>Coretax</p>
-</div>
-<div class="carousel1">
-  <h1>Carousel Nomor.1</h1>
-  <div class="car1">Card</div>
-  <div class="car1">Card</div>
-  <div class="car1">Card</div>
-  <div class="car1">Card</div>
-  <div class="car1">Card</div>
-  <div class="car1">Card</div>
-  <div class="car1">Card</div>
-</div>
-  </main>
+   <div class="topbar">
+     <h4><img class="logo" src="/Bahan/pint06.jpg">Dashboard</h4>
+   </div>
+   <div class="mainlayout">
+      <nav class="sidebar">
+         <div class="mainmenu">
+            <ul>
+               <li><a><i id="gap" class="fi fi-rr-layers"></i>Dahsboard</a></li>
+               <li><a><i id="gap" class="fi fi-rr-objects-column"></i>Product</a></li>
+               <li><a><i id="gap" class="fi fi-rr-layers"></i>Dahsboard</a></li>
+            </ul>
+         </div>
+         <div class="othermenu">
+            <ul>
+               <li><a><i id="gap" class="fi fi-rr-layers"></i>Dahsboard</a></li>
+               <li><a><i id="gap" class="fi fi-rr-layers"></i>Dahsboard</a></li>
+               <li><a><i id="gap" class="fi fi-rr-layers"></i>Dahsboard</a></li>
+            </ul>
+         </div>
+      </nav>
+      <div class="mainbar">
+         <div id="grid" class="ha1">
+            <h1>Veridian Haze</h1>
+         </div>
+         <div id="grid" class="grid1">Sales in 1 Month</div>
+         <div id="grid" class="grid2">Modal</div>
+         <div id="grid" class="grid3">Untung Bersih</div>
+         <div id="grid" class="grid4"></div>
+         <div id="grid" class="grid5"><h4>Peningkatan Penjualan perbulan</h4></div>
+         <div id="grid" class="grid6"><h4>Produk yang sering dibeli</h4></div>
+         <div id="grid" class="grid7"><h4>Tingkat Kepuasan Pelanggan & komentar</h4></div>
+         <div id="grid" class="grid8"><h4> Riwayat Pesanan</h4></div>
+      </div>
+   </div>
+   <main>
+   </main>
 </body>
 </html>
